--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <option value="Vyas Bhawan">Vyas Bhawan</option>
             <option value="Ram Bhawan">Ram Bhawan</option>
             <option value="Budh Bhawan">Budh Bhawan</option>
+            <option value="CVR Bhawan">CVR Bhawan</option>
           </select>
           <br> 
           <label for="birthday">DEPARTURE DATE:</label>
